Add flexbox styling, placeholder text

--- a/index.html
+++ b/index.html
@@ -7,7 +7,29 @@
   </head>
 
   <body>
-    <h1 class='title'>nazwhale</h1>
-    <h2 class='title'>full-stack developer based in London</h2>
+
+  <div class="wrapper">
+    <header>
+      <h1 class='title' id='name'>NAZWHALE</h1>
+      <a class='small-heading' id='job'>full-stack developer</a></br></br>
+      <a class='small-heading' id='page-selection'>WORK | PROFILE | BLOG</a>
+    </header>
+
+    <main>
+      <p class="content">HI!</p>
+    </main>
+
+    <footer>
+      <img id='megaphone' src='images/megaphone.png' alt='megaphone'></br>
+      <p class='small-heading'>GET IN TOUCH</p></br>
+      <a class='contact'>+44 (0)7716898344</br></a>
+      <a class='contact'>nazmalik08@gmail.com</br></br></a>
+      <a class='links' href="http://www.github.com/nazwhale/" target="_blank">GitHub</a>
+      <a href="http://www.medium.com/@nazwhale/" target="_blank">Medium</a>
+      <a href="http://www.twitter.com/nazwhale" target="_blank">Twitter</a></br></br>
+      <p class='small-heading'>May 2017, somewhere in London</p>
+    </footer>
+  </div>
+
   </body>
 </html>
