--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <div class="wrapper">
     <header>
+      <img id='whale-icon' src='images/whale.png' alt='whale'>
       <h1 class='title' id='name'>NAZWHALE</h1>
       <a class='small-heading' id='job'>full-stack developer</a></br></br>
       <a class='small-heading' id='page-selection'>WORK | PROFILE | BLOG</a>
