--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel='stylesheet' type='text/css' href='style.css'>
+    <link rel="shortcut icon" type="image/png" href="images/whale.png">
     <title>nazwhale</title>
   </head>
 
@@ -13,7 +14,7 @@
       <img id='whale-icon' src='images/whale.png' alt='whale'>
       <h1 class='title' id='name'>NAZWHALE</h1>
       <a class='small-heading' id='job'>full-stack developer</a></br></br>
-      <a class='small-heading' id='page-selection'>WORK | PROFILE | BLOG</a>
+      <a class='small-heading' id='page-selection'>WORK &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; PROFILE &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; BLOG</a>
     </header>
 
     <main>
