Remove options bar

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <img id='whale-icon' src='images/whale.png' alt='whale'>
       <h1 class='title' id='name'>NAZWHALE</h1>
       <a class='small-heading' id='job'>full-stack developer</a></br></br>
-      <a class='small-heading' id='page-selection'>WORK &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; PROFILE &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; BLOG</a>
+      <!-- <a class='small-heading' id='page-selection'>WORK &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; PROFILE &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; BLOG</a> -->
     </header>
 
     <main>
