Add external site icons

--- a/index.html
+++ b/index.html
@@ -26,9 +26,12 @@
       <p class='small-heading'>GET IN TOUCH</p></br>
       <a class='contact'>+44 (0)7716898344</br></a>
       <a class='contact'>nazmalik08@gmail.com</br></br></a>
-      <a class='links' href="http://www.github.com/nazwhale/" target="_blank">GitHub</a>
-      <a href="http://www.medium.com/@nazwhale/" target="_blank">Medium</a>
-      <a href="http://www.twitter.com/nazwhale" target="_blank">Twitter</a></br></br>
+      <a href="http://www.github.com/nazwhale/" target="_blank"><img
+      class="icon" id='github-icon' src='images/GitHub.png' alt='GitHub'></a>
+      <a href="http://www.medium.com/@nazwhale/" target="_blank"><img
+      class='icon' id='medium-icon' src='images/Medium.png' alt='Medium'></a>
+      <a href="http://www.twitter.com/nazwhale" target="_blank"><img
+      class="icon" id='twitter-icon' src='images/Twitter.png' alt='Twitter'></a></br></br>
       <p class='small-heading'>May 2017, somewhere in London</p>
     </footer>
   </div>
