Change page to contruction page with new look

--- a/index.html
+++ b/index.html
@@ -9,32 +9,19 @@
 
   <body>
 
-  <div class="wrapper">
-    <header>
-      <img id='whale-icon' src='images/whale.png' alt='whale'>
+    <div id="content">
       <h1 class='title' id='name'>NAZWHALE</h1>
-      <a class='small-heading' id='job'>full-stack developer</a></br></br>
-      <!-- <a class='small-heading' id='page-selection'>WORK &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; PROFILE &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; BLOG</a> -->
-    </header>
-
-    <main>
-      <p class="content">HI!</p>
-    </main>
-
-    <footer>
-      <img id='megaphone' src='images/megaphone.png' alt='megaphone'></br>
-      <p class='small-heading'>GET IN TOUCH</p></br>
-      <a class='contact'>+44 (0)7716898344</br></a>
-      <a class='contact'>nazmalik08@gmail.com</br></br></a>
-      <a href="http://www.github.com/nazwhale/" target="_blank"><img
-      class="icon" id='github-icon' src='images/GitHub.png' alt='GitHub'></a>
-      <a href="http://www.medium.com/@nazwhale/" target="_blank"><img
-      class='icon' id='medium-icon' src='images/Medium.png' alt='Medium'></a>
-      <a href="http://www.twitter.com/nazwhale" target="_blank"><img
-      class="icon" id='twitter-icon' src='images/Twitter.png' alt='Twitter'></a></br></br>
-      <p class='small-heading'>May 2017, somewhere in London</p>
-    </footer>
-  </div>
+      <a class='small-heading' id='job'>full-stack web developer</a></br></br></br>
+      <img id='whale-icon' src='images/whale.png' alt='whale'></br></br>
+      <a class='normal' id='job'>this page is under construction</a></br></br>
+    </div>
+    <div id="footer">
+      <a class='normal'>(+44) 7716 898344</a></br></br>
+      <a class='normal'>nazmalik08@gmail.com</a></br></br>
+      <a class='footer-text'>©2017 <a><a class="footer-text"
+          href="https://github.com/nazwhale" target="_blank">naz
+          malik</a><a class='footer-text'> | Hackney, London</a></br></br>
+    </div>
 
   </body>
 </html>
