--- a/index.html
+++ b/index.html
@@ -11,16 +11,26 @@
 
     <div id="content">
       <h1 class='title' id='name'>NAZWHALE</h1>
-      <a class='small-heading' id='job'>full-stack web developer</a></br></br></br>
-      <img id='whale-icon' src='images/whale.png' alt='whale'></br></br>
-      <a class='normal' id='job'>this page is under construction</a></br></br>
+      <p class='small-heading' id='job'>full-stack developer looking for a junior role in London</p>
+
+    <hr class="line-break">
+
+      <p class='normal'>Here's 3 things I've coded:</p>
+      <p class='normal'>I combined voice interaction and virtual reality to create a <a href="http://www.github.com/nazwhale/spaceship" target="_blank">Spaceship</a> using Amazon's Alexa and webVR.</p>
+      <p class='normal'>I made a command line game of <a href="http://www.github.com/nazwhale/Tic-Tac-Toe" target="_blank">Tic-Tac-Toe</a> with an invincible computer player. The code is clean and 100% TDD.</p>
+      <p class='normal'>I made a <a href="http://www.github.com/nazwhale/pusher-realtime-chat-widget" target="_blank">Realtime Chat Widget</a> using Pusher and the Giphy API. It was fun.</p>
     </div>
+
+    <hr class="line-break">
+
     <div id="footer">
-      <a class='normal'>(+44) 7716 898344</a></br></br>
-      <a class='normal'>nazmalik08@gmail.com</a></br></br>
-      <a class='footer-text'>©2017 <a><a class="footer-text"
-          href="https://github.com/nazwhale" target="_blank">naz
-          malik</a><a class='footer-text'> | Hackney, London</a></br></br>
+      <img id='whale-icon' src='images/whale.png' alt='whale'></br>
+      <a class='footer-text' href="http://www.github.com/nazwhale/" target="_blank">GitHub</a>
+      <a class='footer-text' href="http://www.medium.com/@nazwhale/" target="_blank">Medium</a>
+      <a class='footer-text' href="http://www.twitter.com/nazwhale" target="_blank">Twitter</a></br>
+      <p class='normal'>(+44) 7716 898344</p>
+      <p class='normal'>nazmalik08@gmail.com</p>
+      <p class='footer-text'>©2017 <a class="footer-text"  href="https://github.com/nazwhale" target="_blank">naz malik</a><a class='footer-text'> | Hackney, London</a></p>
     </div>
 
   </body>
