Remove special char

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <a class='footer-text' href="http://www.twitter.com/nazwhale" target="_blank">Twitter</a></br>
       <p class='normal'>(+44) 7716 898344</p>
       <p class='normal'>nazmalik08@gmail.com</p>
-      <p class='footer-text'>©2017 naz malik | Hackney, London</a></p>
+      <p class='footer-text'>&nbsp;&nbsp; Naz Malik 2017 | Hackney, London</a></p>
     </div>
 
   </body>
