--- a/index.html
+++ b/index.html
@@ -9,17 +9,30 @@
 
   <body>
 
-    <div id="content">
-      <h1 class='title' id='name'>NAZWHALE</h1>
+    <header>
+      <h1 class='title' id='name'>NAZ MALIK</h1>
       <p class='small-heading' id='job'>full-stack developer looking for a junior role in London</p>
+    </header>
+
+    <hr class="line-break">
+    
+    <div>
+      <p class='normal'>Here's 3 things I've made:</p>
+      <p class='normal'>I combined voice interaction and virtual reality to create a <a href="http://www.github.com/nazwhale/spaceship" target="_blank">Spaceship</a> using Amazon's Alexa and webVR.</p>
+      <p class='normal'>A command-line game of <a href="http://www.github.com/nazwhale/Tic-Tac-Toe" target="_blank">Tic-Tac-Toe</a> with an invincible computer player. The code is clean and 100% TDD.</p>
+      <p class='normal'>This <a href="http://www.github.com/nazwhale/pusher-realtime-chat-widget" target="_blank">Realtime Chat Widget</a> using Pusher and the Giphy API. It was fun.</p>
+    </div>
 
     <hr class="line-break">
 
-      <p class='normal'>Here's 3 things I've made:</p>
-      <p class='normal'>I combined voice interaction and virtual reality to create a <a href="http://www.github.com/nazwhale/spaceship" target="_blank">Spaceship</a> using Amazon's Alexa and webVR.</p>
-      <p class='normal'>I made a command line game of <a href="http://www.github.com/nazwhale/Tic-Tac-Toe" target="_blank">Tic-Tac-Toe</a> with an invincible computer player. The code is clean and 100% TDD.</p>
-      <p class='normal'>I made a <a href="http://www.github.com/nazwhale/pusher-realtime-chat-widget" target="_blank">Realtime Chat Widget</a> using Pusher and the Giphy API. It was fun.</p>
-    </div>
+    <div class="facts">
+      <p class='normal'>Some facts about me:</p>
+      <li class='normal'>I'd barely written a line of code before March 2017</li>
+      <li class='normal'>I learnt at Makers Academy</li>
+      <li class='normal'>Big fan of TDD Agile and XP</li>
+      <li class='normal'>In Sept. 2017 I live-coded the retro game 'Snake' to teach 35 members of the public for National Coding Week</li>
+      <li class='normal'>I know kung-fu</li>
+    <div>
 
     <hr class="line-break">
 
@@ -30,7 +43,7 @@
       <a class='footer-text' href="http://www.twitter.com/nazwhale" target="_blank">Twitter</a></br>
       <p class='normal'>(+44) 7716 898344</p>
       <p class='normal'>nazmalik08@gmail.com</p>
-      <p class='footer-text'>&nbsp;&nbsp; Naz Malik 2017 | Hackney, London</a></p>
+      <p class='footer-text'>Naz Malik 2017 | Hackney, London</a></p>
     </div>
 
   </body>
