Update with references

--- a/index.html
+++ b/index.html
@@ -27,11 +27,27 @@
 
     <div class="facts">
       <p class='normal'>Some facts about me:</p>
-      <li class='normal'>I'd barely written a line of code before March 2017</li>
+      <li class='normal'>I'd barely written a line of code before March '17</li>
       <li class='normal'>I learnt at Makers Academy</li>
       <li class='normal'>Big fan of TDD Agile and XP</li>
-      <li class='normal'>In Sept. 2017 I live-coded the retro game 'Snake' to teach 35 members of the public for National Coding Week</li>
+      <li class='normal'>In Sept '17 I live-coded the retro game 'Snake' to teach 35 members of the public for National Coding Week</li>
       <li class='normal'>I know kung-fu</li>
+    <div>
+
+    <hr class="line-break">
+
+    <div class="references">
+      <p class='normal'>Nice things people have said:</p>
+      <p class='normal'>"Naz is one of the most impressive individuals I have seen go through the course. Within a weekend of me helping him get set up with Vim he was teaching me new things, I've seen him inspire other members of his cohort to push themselves and his desire to learn and grow is astounding, and I've been continually impressed by his creativity and passion for new technologies. He is also a damn good egg."</p>
+      <p class='normal'>- my coach at Makers Academy</p>
+
+      <hr class="small-line">
+
+      <p class='normal'>"I was impressed with how well organised Naz was in creating the materials for the event, as well as how seamlessly and naturally he worked with my team to ensure we had a high number of signups (which we did - in fact, it was a record for a 'learn to code' event). Naz led the entire event, teaching over 30 beginners (with varying ability levels), empathising with those that were struggling, keeping the 'fast learners' entertained, and generally making sure that all attendees had a great time and learnt a tonne, all while keeping a smile on his face and a positive, empowering tone to the event.
+      
+      Naz is flexible, hard working, kind, resourceful, empathic, a great communicator, and more than any of this - the sort of person you'd want on your team."</p>
+      <p class='normal'>- Makers' head of marketing</p>
+      <p class='normal'>(with whom I organised a live-coding workshop)</p>
     <div>
 
     <hr class="line-break">
